--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Be My Valentine 💘</title>
+  <title>si bom ay bahu</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
@@ -169,15 +169,15 @@
 <body>
 
   <div class="card">
-    <div class="emoji">🐱❤️</div>
-    <h2>MY FAV IRON PLAYER JASLYN,<br>will you be my VAL entine?hehe</h2>
+    <div class="emoji"></div>
+    <h2>si bom ay bahu?,<br>si bom ay bahu?</h2>
 
     <div class="buttons">
-      <button id="yes">Yes 💖</button>
-      <button id="no">No 🙈</button>
+      <button id="yes">Yes </button>
+      <button id="no">No </button>
     </div>
 
-    <div class="hint">Some love stories don’t allow “no” ✨</div>
+    <div class="hint">si bom ay bahu ✨</div>
   </div>
 
   <!-- Sounds -->
@@ -237,3 +237,4 @@
 
 </body>
 </html>
+
