--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       });
 
       setTimeout(() => {
-        alert("YAY I can’t wait for Valentine’s Day with you IN DISCORD JK<3");
+        alert("si bom ay bahuuuuuuu");
       }, 500);
     });
 
@@ -237,4 +237,5 @@
 
 </body>
 </html>
+
 
