--- a/index.html
+++ b/index.html
@@ -170,14 +170,14 @@
 
   <div class="card">
     <div class="emoji"></div>
-    <h2>si bom ay bahu?,<br>si bom ay bahu?</h2>
+    <h2>si analen ay bahu?,<br>si analen ay bahu?</h2>
 
     <div class="buttons">
       <button id="yes">Yes </button>
       <button id="no">No </button>
     </div>
 
-    <div class="hint">si bom ay bahu ✨</div>
+    <div class="hint">si analen ay bahu ✨</div>
   </div>
 
   <!-- Sounds -->
@@ -215,7 +215,7 @@
       });
 
       setTimeout(() => {
-        alert("si bom ay bahuuuuuuu");
+        alert("si analen ay bahuuuuuuu");
       }, 500);
     });
 
@@ -237,6 +237,7 @@
 
 </body>
 </html>
+
 
 
 
